<resources>
    <string name="app_name">IoT t,h,light</string>

    <string name="button">Prikaži temperaturu</string>
    <string name="button2">Prikaži relativnu vlažnost</string>
    <string name="button3">Prikaži osvetljenje</string>
    <string name="button4">Prikaži sva stanja</string>

    <string name="tv_resulta">Rezultat</string>
    <string name="service_on_off">Service on/off</string>

    <!-- About dialog -->
    <string name="info">About</string>
    <string name="infoDEV1">Developer: </string>
    <string name="infoDEV2">Useful things</string>
    <string name="infoEmail1">Email: </string>
    <string name="infoEmail2">limitless.persistance@gmail.com</string>
    <string name="infoGame1">Game rules: </string>
    <string name="infoGame2">Every row, column and 3x3 rectangular must contains numbers from 1 till 9, no duplicate.</string>
    <string name="infoGIT1">GitHub repository: </string>
    <string name="infoGIT2">https://github.com/nikolaJapundzic/IoT_t_h_light</string>
    <!-- About dialog -->


    <string name="yes">Yes</string>
    <string name="no">cancle</string>
    <string name="exitTabela">If you press Yes, you will not be able to continue same game.</string>

    <string name="exitMain">Are you sure you want to exit?</string>
    <string name="done">Done</string>
    <string name="procenat">≈ </string>
    <string name="vrednost">2.5 s</string>
    <string name="vrednosti">Vrednost</string>
</resources>
